[gd_scene load_steps=19 format=4 uid="uid://umjcj47snamt"]

[ext_resource type="Script" path="res://scripts/room1.gd" id="1_rbejo"]
[ext_resource type="PackedScene" uid="uid://ubge28h5l3qp" path="res://scenes/player_body.tscn" id="1_yloam"]
[ext_resource type="Texture2D" uid="uid://b5hh7vj7sgofi" path="res://assets/menu/tilemap_packed.png" id="2_35r11"]
[ext_resource type="PackedScene" uid="uid://5oi56ip58rn8" path="res://scenes/texture_progress_bar.tscn" id="3_5c1ap"]
[ext_resource type="Texture2D" uid="uid://bo0ho82efc1d6" path="res://assets/menu/tilemap-backgrounds_packed.png" id="3_53x1c"]
[ext_resource type="PackedScene" uid="uid://cggrqiahcqgjb" path="res://scenes/gateway.tscn" id="5_hbp4r"]
[ext_resource type="PackedScene" uid="uid://bgydfrn1omvts" path="res://scenes/musique_jeu.tscn" id="7_78kkl"]
[ext_resource type="PackedScene" uid="uid://xhgepoioqb6d" path="res://scenes/note.tscn" id="8_8ll3i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijlrn"]
size = Vector2(20, 10)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1thby"]
texture = ExtResource("2_35r11")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
7:1/0 = 0
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
15:4/0 = 0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 1.125, -9, 1)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 1.125, -9, 1)
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
13:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 1.125, -9, 1)
14:7/0 = 0
14:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 1.125, -9, 1)
15:7/0 = 0
15:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 1.125, -9, 1)
16:7/0 = 0
16:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 1.125, -9, 1)
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0

[sub_resource type="TileSet" id="TileSet_yhcno"]
tile_size = Vector2i(18, 18)
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_1thby")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b3h37"]
texture = ExtResource("2_35r11")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0

[sub_resource type="TileSet" id="TileSet_xs7ud"]
tile_size = Vector2i(18, 18)
sources/1 = SubResource("TileSetAtlasSource_b3h37")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1xcsb"]
texture = ExtResource("3_53x1c")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0

[sub_resource type="TileSet" id="TileSet_xga4e"]
tile_size = Vector2i(24, 24)
sources/1 = SubResource("TileSetAtlasSource_1xcsb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_me3wp"]
size = Vector2(54, 3.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_775rw"]
size = Vector2(18, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_euwb2"]
size = Vector2(36, 4)

[node name="RandomLevel1" type="Node2D"]
script = ExtResource("1_rbejo")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_yloam")]
position = Vector2(37, -12)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(0, 12)
zoom = Vector2(4, 4)
limit_left = -16
limit_top = -370
limit_right = 408
limit_bottom = 35
position_smoothing_enabled = true

[node name="playerSpawn" type="StaticBody2D" parent="."]
position = Vector2(10, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerSpawn"]
position = Vector2(26, 0)
shape = SubResource("RectangleShape2D_ijlrn")
disabled = true

[node name="TileMaps" type="Node" parent="."]

[node name="collisions" type="TileMapLayer" parent="TileMaps"]
z_index = -1
tile_map_data = PackedByteArray("AAACAAAAAgACAAEAAAABAAAAAgACAAEAAAAAAAAAAgAEAAEAAAADAAAAAgACAAEAAAAEAAAAAgAFAAEAAAAFAAAAAgAEAAEAAAAAAP//AgADAAYAAAAAAP7/AgADAAYAAAAAAP3/AgADAAYAAAAAAPz/AgADAAYAAAAAAPv/AgADAAYAAAAAAPr/AgADAAYAAAAAAPn/AgADAAYAAAAAAPj/AgADAAYAAAAAAPf/AgADAAYAAAAAAPb/AgADAAYAAAAAAPX/AgADAAYAAAAGAAAAAgACAAEAAAAHAAAAAgACAAEAAAAIAAAAAgAFAAEAAAAJAAAAAgAEAAEAAAAKAAAAAgACAAEAAAALAAAAAgACAAEAAAAMAAAAAgACAAEAAAANAAAAAgACAAEAAAAOAAAAAgACAAEAAAAPAAAAAgACAAEAAAAQAAAAAgACAAEAAAARAAAAAgACAAEAAAASAAAAAgACAAEAAAATAAAAAgACAAEAAAAUAAAAAgACAAEAAAAVAAAAAgAFAAEAAAAVAP//AgABAAYAAAAVAP7/AgABAAYAAAAVAP3/AgABAAYAAAAVAPz/AgAFAAAAAAAVAPv/AgACAAYAAAAVAPr/AgAFAAEAAAAVAPn/AgABAAYAAAAVAPj/AgABAAYAAAAVAPf/AgABAAYAAAAVAPb/AgAFAAAAAAAVAPX/AgACAAYAAAAEAP7/AgABAAEAAAAFAP7/AgADAAEAAAAEAP//AgABAAYAAAAFAP//AgADAAYAAAAIAP3/AgABAAEAAAAIAP7/AgABAAYAAAAJAP3/AgADAAEAAAAJAP7/AgADAAYAAAAIAP//AgABAAYAAAAJAP//AgADAAYAAAANAPj/AgAIAAIAAAAOAPj/AgAHAAIAAAAPAPj/AgAKAAIAAAAOAPn/AgAJAAMAAAAOAPr/AgAJAAQAAAAOAPv/AgAJAAUAAAANAPz/AgAGAAcAAAAOAPz/AgAGAAcAAAAPAPz/AgAGAAcAAAAMAPz/AgAGAAcAAAAQAPz/AgAGAAcAAAAKAP//AgAGAAEAAAASAPr/AgABAAAAAAATAPv/AgABAAcAAAAUAPz/AgABAAcAAAAUAPv/AgAFAAAAAAAUAPr/AgACAAEAAAATAPr/AgACAAEAAAABAPf/AgAMAAYAAAABAPr/AgAMAAYAAAACAPr/AgANAAYAAAADAPr/AgAOAAUAAAADAPn/AgANAAQAAAACAPf/AgANAAYAAAADAPf/AgANAAYAAAAEAPf/AgANAAYAAAAFAPf/AgANAAYAAAAEAPn/AgANAAYAAAAFAPn/AgANAAYAAAAGAPf/AgAOAAQAAAAGAPj/AgANAAUAAAAGAPn/AgANAAYAAAAHAPn/AgANAAYAAAAIAPn/AgANAAYAAAAHAPj/AgANAAYAAAAIAPj/AgANAAYAAAAJAPj/AgAOAAQAAAAJAPn/AgAOAAUAAAAAAPT/AgADAAYAAAAAAPP/AgADAAYAAAAAAPL/AgADAAYAAAAAAPH/AgADAAYAAAAVAPT/AgACAAYAAAAVAPP/AgAFAAEAAAAVAPL/AgABAAYAAAAVAPH/AgABAAYAAAAPAPP/AgABAAQAAAAQAPP/AgACAAUAAAARAPP/AgACAAUAAAASAPP/AgACAAUAAAATAPP/AgACAAUAAAAUAPP/AgACAAUAAAAQAPT/AgABAAcAAAASAPX/AgABAAcAAAAUAPb/AgABAAcAAAARAPT/AgACAAcAAAATAPX/AgACAAcAAAASAPT/AgAFAAAAAAAUAPX/AgAFAAAAAAATAPT/AgACAAYAAAAUAPT/AgACAAYAAAABAP//AgAEAAYAAAADAP//AgAFAAUAAAACAP//AgALAAIAAAAFAP3/AgAEAAYAAAAMAP//AgAEAAYAAAAPAP//AgAEAAYAAAASAPn/AgAEAAYAAAAQAPL/AgAEAAcAAAAUAPL/AgAEAAcAAAARAPL/AgAFAAcAAAATAPn/AgAFAAYAAAAUAPn/AgAIAAYAAAAOAP//AgAIAAYAAAAIAPz/AgAIAAYAAAAHAP//AgAJAAYAAAAGAP//AgAFAAYAAAANAP//AgAFAAYAAAASAP//AgAFAAYAAAAAAAEAAgACAAYAAAABAAEAAgACAAYAAAACAAEAAgACAAYAAAADAAEAAgACAAYAAAAEAAEAAgACAAYAAAAFAAEAAgACAAYAAAAGAAEAAgACAAYAAAAHAAEAAgACAAYAAAAIAAEAAgACAAYAAAAJAAEAAgACAAYAAAAKAAEAAgACAAYAAAALAAEAAgACAAYAAAAMAAEAAgACAAYAAAANAAEAAgACAAYAAAAOAAEAAgACAAYAAAAPAAEAAgACAAYAAAAQAAEAAgACAAYAAAARAAEAAgACAAYAAAASAAEAAgACAAYAAAATAAEAAgACAAYAAAAUAAEAAgACAAYAAAAVAAEAAgACAAYAAAAWAAEAAgACAAYAAAAWAAAAAgACAAYAAAAWAPH/AgACAAYAAAAWAPL/AgACAAYAAAAWAPP/AgACAAYAAAAWAPT/AgACAAYAAAAWAPX/AgACAAYAAAAWAPb/AgACAAYAAAAWAPf/AgACAAYAAAAWAPj/AgACAAYAAAAWAPn/AgACAAYAAAAWAPr/AgACAAYAAAAWAPv/AgACAAYAAAAWAPz/AgACAAYAAAAWAP3/AgACAAYAAAAWAP7/AgACAAYAAAAWAP//AgACAAYAAAD///H/AgACAAYAAAD///L/AgACAAYAAAD///P/AgACAAYAAAD///T/AgACAAYAAAD///X/AgACAAYAAAD///b/AgACAAYAAAD///f/AgACAAYAAAD///j/AgACAAYAAAD///n/AgACAAYAAAD///r/AgACAAYAAAD///v/AgACAAYAAAD///z/AgACAAYAAAD///3/AgACAAYAAAD///7/AgACAAYAAAD/////AgACAAYAAAD//wAAAgACAAYAAAD//wEAAgACAAYAAAD//+7/AgACAAYAAAD//+//AgACAAYAAAAAAO7/AgAEAAAAAAAAAO//AgADAAYAAAABAO7/AgACAAcAAAACAO7/AgACAAcAAAADAO7/AgACAAcAAAAEAO7/AgACAAcAAAAFAO7/AgACAAcAAAAGAO7/AgACAAcAAAAHAO7/AgACAAcAAAAIAO7/AgACAAcAAAAJAO7/AgACAAcAAAAKAO7/AgACAAcAAAALAO7/AgACAAcAAAAMAO7/AgACAAcAAAANAO7/AgACAAcAAAAOAO7/AgACAAcAAAAPAO7/AgACAAcAAAAQAO7/AgACAAcAAAARAO7/AgACAAcAAAASAO7/AgACAAcAAAATAO7/AgACAAcAAAAUAO7/AgACAAcAAAAVAO7/AgAFAAAAAAAVAO//AgABAAYAAAAWAO7/AgACAAYAAAAWAO//AgACAAYAAAD//+3/AgACAAYAAAAAAO3/AgACAAYAAAABAO3/AgACAAYAAAACAO3/AgACAAYAAAADAO3/AgACAAYAAAAEAO3/AgACAAYAAAAFAO3/AgACAAYAAAAGAO3/AgACAAYAAAAHAO3/AgACAAYAAAAIAO3/AgACAAYAAAAJAO3/AgACAAYAAAAKAO3/AgACAAYAAAALAO3/AgACAAYAAAAMAO3/AgACAAYAAAANAO3/AgACAAYAAAAOAO3/AgACAAYAAAAPAO3/AgACAAYAAAAQAO3/AgACAAYAAAARAO3/AgACAAYAAAASAO3/AgACAAYAAAATAO3/AgACAAYAAAAUAO3/AgACAAYAAAAVAO3/AgACAAYAAAAWAO3/AgACAAYAAAAVAPD/AgABAAYAAAAWAPD/AgACAAYAAAAAAPD/AgADAAYAAAD///D/AgACAAYAAAA=")
tile_set = SubResource("TileSet_yhcno")

[node name="front_ground" type="TileMapLayer" parent="TileMaps"]

[node name="far_ground" type="TileMapLayer" parent="TileMaps"]
modulate = Color(0.65834, 0.65834, 0.65834, 1)
z_index = -2
tile_map_data = PackedByteArray("AAADAPz/AQABAAEAAAAEAPz/AQADAAEAAAADAP3/AQABAAYAAAADAP7/AQABAAYAAAADAP//AQABAAYAAAAEAP3/AQADAAYAAAAEAP7/AQADAAYAAAAEAP//AQADAAYAAAARAP//AQADAAYAAAARAP7/AQADAAEAAAAQAP3/AQADAAYAAAAQAPz/AQADAAYAAAAQAPv/AQADAAEAAAAMAP//AQABAAYAAAANAP7/AQAFAAEAAAANAP3/AQABAAEAAAAOAPz/AQABAAYAAAAMAP7/AQABAAEAAAAOAPv/AQABAAEAAAAQAP7/AQAEAAEAAAAOAP3/AQAFAAEAAAANAP//AQACAAYAAAAOAP//AQACAAYAAAAOAP7/AQACAAYAAAAPAP7/AQACAAYAAAAPAP//AQACAAYAAAAQAP//AQACAAYAAAAPAP3/AQACAAYAAAAPAPz/AQACAAYAAAAPAPv/AQACAAEAAAANAPn/AQAHAAIAAAANAPr/AQAHAAIAAAANAPv/AQAHAAIAAAANAPz/AQAHAAIAAAAGAPX/AQANAAcAAAAHAPX/AQAOAAcAAAAIAPX/AQAPAAcAAAAKAPL/AQANAAcAAAALAPL/AQAOAAcAAAAMAPL/AQAPAAcAAAADAPH/AQANAAcAAAAEAPH/AQAPAAcAAAAHAPH/AQAQAAcAAAAOAPH/AQAQAAcAAAAJAPr/AQARAAQAAAAJAPv/AQARAAUAAAAJAPz/AQARAAYAAAAIAPn/AQARAAAAAAAIAPr/AQARAAIAAAAJAPn/AQASAAAAAAAKAPn/AQATAAAAAAAKAPr/AQATAAIAAAAPAPn/AQAHAAIAAAAPAPr/AQAHAAIAAAADAPv/AQAEAAYAAAAQAPr/AQAEAAYAAAATAPH/AQAKAAUAAAATAPL/AQAKAAYAAAA=")
tile_set = SubResource("TileSet_xs7ud")

[node name="background" type="TileMapLayer" parent="TileMaps"]
z_index = -10
tile_map_data = PackedByteArray("AAAAAAAAAQABAAIAAAABAAAAAQACAAIAAAACAAAAAQADAAIAAAADAAAAAQADAAIAAAAAAP//AQABAAIAAAABAP//AQACAAIAAAACAP//AQADAAIAAAADAP//AQADAAIAAAAAAP7/AQABAAIAAAABAP7/AQACAAIAAAACAP7/AQADAAIAAAADAP7/AQADAAIAAAAAAP3/AQABAAIAAAABAP3/AQACAAIAAAACAP3/AQADAAIAAAADAP3/AQABAAIAAAAEAP7/AQAAAAIAAAAFAP7/AQABAAIAAAAGAP7/AQACAAIAAAAHAP7/AQADAAIAAAAEAP3/AQABAAIAAAAFAP3/AQABAAIAAAAGAP3/AQABAAIAAAAHAP3/AQADAAIAAAAIAP3/AQAAAAIAAAAJAP3/AQABAAIAAAAKAP3/AQACAAIAAAALAP3/AQADAAIAAAAMAP3/AQAAAAIAAAANAP3/AQABAAIAAAAOAP3/AQAAAAIAAAAPAP3/AQABAAIAAAAMAP7/AQAAAAIAAAANAP7/AQABAAIAAAAOAP7/AQAAAAIAAAAPAP7/AQABAAIAAAAMAP//AQAAAAIAAAANAP//AQABAAIAAAAOAP//AQAAAAIAAAAPAP//AQABAAIAAAAMAAAAAQAAAAIAAAANAAAAAQABAAIAAAAOAAAAAQAAAAIAAAAPAAAAAQABAAIAAAAIAAAAAQAAAAIAAAAJAAAAAQABAAIAAAAKAAAAAQACAAIAAAALAAAAAQADAAIAAAAEAAAAAQAAAAIAAAAFAAAAAQABAAIAAAAGAAAAAQACAAIAAAAHAAAAAQADAAIAAAAEAP//AQAAAAIAAAAFAP//AQABAAIAAAAGAP//AQACAAIAAAAHAP//AQADAAIAAAAIAP//AQAAAAIAAAAJAP//AQABAAIAAAAKAP//AQACAAIAAAALAP//AQADAAIAAAAIAP7/AQAAAAIAAAAJAP7/AQABAAIAAAAKAP7/AQACAAIAAAALAP7/AQADAAIAAAAQAP3/AQACAAIAAAARAP3/AQADAAIAAAAQAP7/AQACAAIAAAARAP7/AQADAAIAAAAQAP//AQACAAIAAAARAP//AQADAAIAAAAQAAAAAQACAAIAAAARAAAAAQADAAIAAAD///3/AQAAAAIAAAD///7/AQAAAAIAAAD/////AQAAAAIAAAD//wAAAQAAAAIAAAD///z/AQAAAAEAAAAAAPz/AQABAAEAAAABAPz/AQACAAEAAAACAPz/AQADAAEAAAADAPz/AQAAAAEAAAAEAPz/AQABAAEAAAAFAPz/AQACAAEAAAAGAPz/AQADAAEAAAAHAPz/AQAAAAEAAAAIAPz/AQABAAEAAAAJAPz/AQACAAEAAAAKAPz/AQADAAEAAAALAPz/AQAAAAEAAAAMAPz/AQABAAEAAAANAPz/AQACAAEAAAAOAPz/AQADAAEAAAAPAPz/AQAAAAEAAAAQAPz/AQABAAEAAAARAPz/AQACAAEAAAD///v/AQAAAAAAAAAAAPv/AQABAAAAAAABAPv/AQACAAAAAAACAPv/AQADAAAAAAADAPv/AQAAAAAAAAAEAPv/AQABAAAAAAAFAPv/AQACAAAAAAAGAPv/AQADAAAAAAAHAPv/AQAAAAAAAAAIAPv/AQABAAAAAAAJAPv/AQACAAAAAAAKAPv/AQADAAAAAAALAPv/AQAAAAAAAAAMAPv/AQABAAAAAAANAPv/AQACAAAAAAAOAPv/AQADAAAAAAAPAPv/AQAAAAAAAAAQAPv/AQABAAAAAAARAPv/AQACAAAAAAAOAPr/AQAAAAAAAAAPAPr/AQABAAAAAAAQAPr/AQACAAAAAAARAPr/AQADAAAAAAAOAPn/AQAAAAAAAAAPAPn/AQABAAAAAAAQAPn/AQACAAAAAAARAPn/AQADAAAAAAAOAPj/AQACAAAAAAAPAPj/AQADAAAAAAAQAPj/AQACAAAAAAARAPj/AQADAAAAAAAOAPf/AQACAAAAAAAPAPf/AQADAAAAAAAQAPf/AQACAAAAAAARAPf/AQADAAAAAAAOAPb/AQACAAAAAAAPAPb/AQADAAAAAAAQAPb/AQACAAAAAAARAPb/AQADAAAAAAAOAPX/AQACAAAAAAAPAPX/AQADAAAAAAAQAPX/AQACAAAAAAARAPX/AQADAAAAAAAOAPT/AQAAAAAAAAAPAPT/AQABAAAAAAAQAPT/AQACAAAAAAARAPT/AQADAAAAAAAKAPT/AQAAAAAAAAALAPT/AQABAAAAAAAMAPT/AQACAAAAAAANAPT/AQADAAAAAAAGAPT/AQAAAAAAAAAHAPT/AQABAAAAAAAIAPT/AQACAAAAAAAJAPT/AQADAAAAAAACAPT/AQAAAAAAAAADAPT/AQABAAAAAAAEAPT/AQACAAAAAAAFAPT/AQADAAAAAAD///T/AQABAAAAAAAAAPT/AQACAAAAAAABAPT/AQADAAAAAAACAPX/AQAAAAAAAAADAPX/AQABAAAAAAAEAPX/AQACAAAAAAAFAPX/AQAAAAAAAAACAPb/AQAAAAAAAAADAPb/AQABAAAAAAAEAPb/AQACAAAAAAAFAPb/AQAAAAAAAAACAPf/AQAAAAAAAAADAPf/AQABAAAAAAAEAPf/AQACAAAAAAAFAPf/AQAAAAAAAAACAPj/AQAAAAAAAAADAPj/AQABAAAAAAAEAPj/AQACAAAAAAAFAPj/AQADAAAAAAD///b/AQABAAAAAAAAAPb/AQACAAAAAAABAPb/AQADAAAAAAD///X/AQABAAAAAAAAAPX/AQACAAAAAAABAPX/AQADAAAAAAD///f/AQABAAAAAAAAAPf/AQACAAAAAAABAPf/AQADAAAAAAD///j/AQABAAAAAAAAAPj/AQACAAAAAAABAPj/AQADAAAAAAD///n/AQABAAAAAAAAAPn/AQACAAAAAAABAPn/AQADAAAAAAD///r/AQABAAAAAAAAAPr/AQACAAAAAAABAPr/AQADAAAAAAACAPr/AQAAAAAAAAADAPr/AQABAAAAAAAEAPr/AQACAAAAAAAFAPr/AQADAAAAAAAGAPr/AQAAAAAAAAAHAPr/AQABAAAAAAAIAPr/AQACAAAAAAAJAPr/AQADAAAAAAAKAPr/AQAAAAAAAAALAPr/AQABAAAAAAAMAPr/AQACAAAAAAANAPr/AQADAAAAAAAKAPn/AQAAAAAAAAALAPn/AQABAAAAAAAMAPn/AQACAAAAAAANAPn/AQADAAAAAAAGAPn/AQAAAAAAAAAHAPn/AQABAAAAAAAIAPn/AQACAAAAAAAJAPn/AQADAAAAAAACAPn/AQAAAAAAAAADAPn/AQABAAAAAAAEAPn/AQACAAAAAAAFAPn/AQADAAAAAAAGAPj/AQAAAAAAAAAHAPj/AQABAAAAAAAIAPj/AQACAAAAAAAJAPj/AQAAAAAAAAAKAPj/AQABAAAAAAALAPj/AQACAAAAAAAMAPj/AQAAAAAAAAANAPj/AQABAAAAAAAGAPf/AQABAAAAAAAHAPf/AQACAAAAAAAIAPf/AQADAAAAAAAGAPb/AQABAAAAAAAHAPb/AQACAAAAAAAIAPb/AQADAAAAAAAGAPX/AQABAAAAAAAHAPX/AQACAAAAAAAIAPX/AQADAAAAAAAJAPX/AQAAAAAAAAAKAPX/AQABAAAAAAALAPX/AQACAAAAAAAMAPX/AQAAAAAAAAAJAPb/AQAAAAAAAAAKAPb/AQABAAAAAAALAPb/AQACAAAAAAAMAPb/AQAAAAAAAAAJAPf/AQAAAAAAAAAKAPf/AQABAAAAAAALAPf/AQACAAAAAAAMAPf/AQAAAAAAAAANAPX/AQABAAAAAAANAPb/AQABAAAAAAANAPf/AQABAAAAAAD///P/AQABAAAAAAAAAPP/AQABAAAAAAABAPP/AQABAAAAAAACAPP/AQABAAAAAAACAPL/AQABAAAAAAADAPL/AQABAAAAAAAEAPL/AQABAAAAAAAFAPL/AQABAAAAAAAFAPP/AQABAAAAAAAEAPP/AQABAAAAAAADAPP/AQABAAAAAAABAPL/AQABAAAAAAAAAPL/AQABAAAAAAD///L/AQABAAAAAAAGAPL/AQABAAAAAAAGAPP/AQABAAAAAAAHAPP/AQABAAAAAAAIAPP/AQABAAAAAAAIAPL/AQABAAAAAAAHAPL/AQABAAAAAAAJAPL/AQABAAAAAAAKAPL/AQABAAAAAAALAPL/AQABAAAAAAAMAPL/AQABAAAAAAANAPL/AQABAAAAAAAOAPL/AQABAAAAAAAPAPL/AQABAAAAAAAQAPL/AQABAAAAAAARAPL/AQABAAAAAAARAPP/AQABAAAAAAAQAPP/AQABAAAAAAAPAPP/AQABAAAAAAAOAPP/AQABAAAAAAANAPP/AQABAAAAAAAMAPP/AQABAAAAAAALAPP/AQABAAAAAAAKAPP/AQABAAAAAAAJAPP/AQABAAAAAAA=")
tile_set = SubResource("TileSet_xga4e")

[node name="Platforms" type="Node" parent="."]

[node name="cloud_big" type="StaticBody2D" parent="Platforms"]
position = Vector2(117, -226)

[node name="Sprite2D" type="Sprite2D" parent="Platforms/cloud_big"]
z_index = -1
texture = ExtResource("2_35r11")
region_enabled = true
region_rect = Rect2(234, 126, 54, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/cloud_big"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_me3wp")
one_way_collision = true

[node name="cloud_small" type="StaticBody2D" parent="Platforms"]
position = Vector2(81, -228)

[node name="Sprite2D" type="Sprite2D" parent="Platforms/cloud_small"]
z_index = -1
position = Vector2(0, -1)
texture = ExtResource("2_35r11")
region_enabled = true
region_rect = Rect2(288, 126, 18, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/cloud_small"]
position = Vector2(0, -4)
rotation = -6.28319
shape = SubResource("RectangleShape2D_775rw")
one_way_collision = true

[node name="cloud_default" type="StaticBody2D" parent="Platforms"]
position = Vector2(54, -191)

[node name="Sprite2D_left" type="Sprite2D" parent="Platforms/cloud_default"]
z_index = -1
position = Vector2(-9, 0)
texture = ExtResource("2_35r11")
region_enabled = true
region_rect = Rect2(234, 126, 18, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/cloud_default"]
position = Vector2(0, -5)
rotation = -6.28319
shape = SubResource("RectangleShape2D_euwb2")
one_way_collision = true

[node name="Sprite2D_right" type="Sprite2D" parent="Platforms/cloud_default"]
z_index = -1
position = Vector2(9, 0)
scale = Vector2(-1, 1)
texture = ExtResource("2_35r11")
region_enabled = true
region_rect = Rect2(234, 126, 18, 14)

[node name="cloud_default2" type="StaticBody2D" parent="Platforms"]
position = Vector2(216, -209)

[node name="Sprite2D_left" type="Sprite2D" parent="Platforms/cloud_default2"]
z_index = -1
position = Vector2(-9, 0)
texture = ExtResource("2_35r11")
region_enabled = true
region_rect = Rect2(234, 126, 18, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/cloud_default2"]
position = Vector2(0, -5)
rotation = -6.28319
shape = SubResource("RectangleShape2D_euwb2")
one_way_collision = true

[node name="Sprite2D_right" type="Sprite2D" parent="Platforms/cloud_default2"]
z_index = -1
position = Vector2(9, 0)
scale = Vector2(-1, 1)
texture = ExtResource("2_35r11")
region_enabled = true
region_rect = Rect2(234, 126, 18, 14)

[node name="Area2D" parent="." instance=ExtResource("5_hbp4r")]
position = Vector2(351, -244)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="healthBar" parent="CanvasLayer" instance=ExtResource("3_5c1ap")]
offset_left = 37.0
offset_right = 9303.0
speed = 120

[node name="MusiqueJeu" parent="." instance=ExtResource("7_78kkl")]

[node name="Note1" parent="." instance=ExtResource("8_8ll3i")]
position = Vector2(262, -144)

[node name="Note2" parent="." instance=ExtResource("8_8ll3i")]
position = Vector2(311, 0)
id = 1

[node name="Note3" parent="." instance=ExtResource("8_8ll3i")]
position = Vector2(111, -234)
id = 2

[node name="Note4" parent="." instance=ExtResource("8_8ll3i")]
position = Vector2(158, -145)
id = 3

[node name="Note5" parent="." instance=ExtResource("8_8ll3i")]
position = Vector2(217, -216)
id = 4

[node name="Note6" parent="." instance=ExtResource("8_8ll3i")]
position = Vector2(162, -54)
id = 5

[node name="Note7" parent="." instance=ExtResource("8_8ll3i")]
position = Vector2(85, -34)
id = 6

[node name="Label" type="Label" parent="."]
offset_left = 282.0
offset_top = -286.0
offset_right = 322.0
offset_bottom = -263.0

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="zero" from="CanvasLayer/healthBar" to="." method="_on_texture_progress_bar_zéro"]
[connection signal="catch" from="Note1" to="." method="_on_note_catch"]
[connection signal="catch" from="Note2" to="." method="_on_note_catch"]
[connection signal="catch" from="Note3" to="." method="_on_note_catch"]
[connection signal="catch" from="Note4" to="." method="_on_note_catch"]
[connection signal="catch" from="Note5" to="." method="_on_note_catch"]
[connection signal="catch" from="Note6" to="." method="_on_note_catch"]
[connection signal="catch" from="Note7" to="." method="_on_note_catch"]
